Make both supported Wayland text-input protocols available for clients

Qt's own protocol is the more stable option, and chosen automatically
by QtVirtualKeyboard if it is made available by the compositor.

Change-Id: Ic8c65e81acd2e461bf078bec26794019e0aa855c
Task-number: QTBUG-103580
Reviewed-by: Dominik Holland <dominik.holland@qt.io>
(cherry picked from commit 96e6f35fdb07795d59523bd8f91a2f3d7de21009)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>